<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register"
    android:backgroundTint="@color/background">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textSize="25dp"
        android:fontFamily="@font/poppinsbold"
        android:id="@+id/signin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/signin"
        android:padding="30dp"
        android:id="@+id/edt_signin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:paddingStart="10dp"
            android:fontFamily="@font/poppinsregular"
            android:textSize="15sp"
            android:id="@+id/edt_email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="10dp"
            android:hint="@string/username"
            android:paddingStart="10dp"
            android:fontFamily="@font/poppinsregular"
            android:textSize="15sp"
            android:id="@+id/edt_uname"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:paddingStart="10dp"
            android:fontFamily="@font/poppinsregular"
            android:textSize="15sp"
            android:id="@+id/edt_pw"/>
</LinearLayout>

    <Button
        android:id="@+id/btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_signin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:width="150dp"
        android:fontFamily="@font/poppinsbold"
        android:text="Sign In"
        android:textColor="@color/white"
        android:textColorHighlight="@color/primary"
        android:textColorHint="@color/primary"
        android:textSize="12dp"
        app:cornerRadius="5dp"
        app:rippleColor="@color/primary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_2"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="or Sign In with"
        android:textSize="15dp"
        android:fontFamily="@font/poppinsmedium"
        android:id="@+id/or"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/or"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/google"
        />


</RelativeLayout>