<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <ImageView
            android:id="@+id/imageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/profile"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="360dp"
            tools:layout_editor_absoluteY="26dp" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppinssemibold"
            android:text="Hello, !"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt1"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppinsbold"
            android:text="Where do you want to go today?"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt1" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt2"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:width="350dp"
            android:fontFamily="@font/poppinsbold"
            android:text="Explore Now!"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="12dp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt2" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/txt4"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="20dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="170dp"
                            android:layout_height="108dp"
                            android:src="@drawable/dufan" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/poppinsmedium"
                            android:text="@string/dufan" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="20dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="170dp"
                            android:layout_height="108dp"
                            android:src="@drawable/tmii" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppinsmedium"
                            android:text="@string/tmii"
                            android:textAlignment="center" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="20dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="200dp"
                            android:layout_height="108dp"
                            android:src="@drawable/monas" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/poppinsmedium"
                            android:text="@string/monas" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="Trending this month"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="336dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="133dp"
            android:layout_height="42dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/visit_the_best_location_today"
            android:textSize="15dp"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="243dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:text="Explore >"
            android:textSize="13dp"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="285dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>